# energy-demand-predictor

./: .cache.sqlite  README.md  makefile  pyproject.toml
.github/workflows/: feature_piepline.yml  feature_pipeline.yml  inference_pipeline.yml  monitoring_pipeline.yml  training_pipeline.yml
data/raw/electricity_raw_data/: hourly_demand_2025-01-02.json  hourly_demand_2025-01-03.json  hourly_demand_2025-01-04.json  hourly_demand_2025-01-05.json  hourly_demand_2025-01-06.json  hourly_demand_2025-01-07.json  hourly_demand_2025-01-08.json  hourly_demand_2025-01-09.json  hourly_demand_2025-01-10.json  hourly_demand_2025-01-11.json  hourly_demand_2025-01-12.json  hourly_demand_2025-01-13.json  hourly_demand_2025-01-14.json  hourly_demand_2025-01-15.json  hourly_demand_2025-01-16.json  hourly_demand_2025-01-17.json  hourly_demand_2025-01-18.json  hourly_demand_2025-01-19.json  hourly_demand_2025-01-20.json  hourly_demand_2025-01-21.json  hourly_demand_2025-01-22.json  hourly_demand_2025-01-23.json  hourly_demand_2025-01-24.json  hourly_demand_2025-01-25.json  hourly_demand_2025-01-26.json  hourly_demand_2025-01-27.json  hourly_demand_2025-01-28.json  hourly_demand_2025-01-29.json  hourly_demand_2025-01-30.json  (+151 more)
models/: model.pkl
src/: frontend.py  logger.py  monitoring_frontend.py  paths.py  plot.py
src/component/: backfill_feature_group.py  data_info.py  feature_group_config.py  feature_store_api.py  inference.py  model_info.py  model_registry_api.py  monitoring.py
src/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
(+4 files in other folders)
