[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shahnoor77 <shahnoorkhan9955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.32.3"
pandas = "2.1.4"
tqdm = "^4.67.1"
scikit-learn = "1.5.2"
requests-cache = "1.2.1"
retry-requests = "2.0.0"
openmeteo-requests = "1.3.0"
python-dotenv = "1.0.1"
pyarrow = "14.0.2"
confluent-kafka = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
