[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shahnoor77 <shahnoorkhan9955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.32.3"
pandas = "2.1.4"
tqdm = "^4.67.1"
scikit-learn = "1.5.2"
requests-cache = "1.2.1"
retry-requests = "2.0.0"
openmeteo-requests = "1.3.0"
python-dotenv = "1.0.1"
pyarrow = "14.0.2"
comet-ml = "^3.49.11"
fire = "^0.7.0"
optuna = "^4.4.0"
xgboost = "1.7.6"
lightgbm = "4.5.0"
seaborn = "^0.13.2"
retry = "^0.9.2"
jupyter = "1.1.1"
streamlit = "1.10.0"
geopandas = "1.0.1"
plotly = "^6.2.0"
ruff = "^0.12.1"
altair = "^4.2"
protobuf = "^3.20"
imageio = {extras = ["ffmpeg"], version = "^2.37.0"}
twofish = "^0.3.0"
hopsworks = "^3.7.0"
hsml = "^3.7.2"
pexpect = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
